--- a/handlarz/index.html
+++ b/handlarz/index.html
@@ -20,7 +20,7 @@
     
     <div id="product-list">
         <div class="product">
-            <img src="product1.png" alt="Pomidor">
+            <img src="AK-47_type_II_noBG.png" alt="Pomidor">
             <h2>Pomidor</h2>
             <p>Cena: $5.00</p>
             <button class="add-to-cart" data-price="5.00">Dodaj do koszyka</button>
