--- a/handlarz/index.html
+++ b/handlarz/index.html
@@ -139,6 +139,13 @@
         </div>
 		
 		<div class="product">
+            <img src="ikonki/Latarka do broni.png" alt="Latarka">
+            <h2>Latarka do broni</h2>
+            <p>$45.000</p>
+            <button class="add-to-cart" data-price="45000.00">Dodaj</button>
+        </div>
+		
+		<div class="product">
             <img src="ikonki/amunicja do broni3.png" alt="amunicja do broni3">
             <h2>Amunicja Do Broni Długiej</h2>
             <p>$140.000</p>
@@ -162,24 +169,18 @@
 		<div class="product">
             <img src="ikonki/Kamizelka Zwykła.png" alt="Kamizelka Zwykła">
             <h2>Kamizelka Zwykła 5 Szt.</h2>
-            <p>$300.000</p>
-            <button class="add-to-cart" data-price="300000.00">Dodaj</button>
+            <p>$65.000</p>
+            <button class="add-to-cart" data-price="65000.00">Dodaj</button>
         </div>
 	
 		<div class="product">
             <img src="ikonki/Kamizelka Lekka.png" alt="Kamizelka Lekka">
             <h2>Kamizelka Lekka 5 Szt.</h2>
-            <p>$300.000</p>
-            <button class="add-to-cart" data-price="300000.00">Dodaj</button>
-        </div>
-		<!--
-		<div class="product">
-            <img src="ikonki/SNS.png" alt="SNS">
-            <h2>SNS</h2>
-            <p>$300.000</p>
-            <button class="add-to-cart" data-price="300000.00">Dodaj</button>
+            <p>$40.000</p>
+            <button class="add-to-cart" data-price="40000.00">Dodaj</button>
         </div>
 		
+		<!--
 		<div class="product">
             <img src="ikonki/SNS.png" alt="SNS">
             <h2>SNS</h2>
