--- a/handlarz/index.html
+++ b/handlarz/index.html
@@ -25,6 +25,14 @@
             <p>$15.000.000</p>
             <button class="add-to-cart" data-price="15000000.00">Dodaj</button>
         </div>
+
+    <div id="product-list">
+        <div class="product">
+            <img src="ikonki/SMG_MK2.png" alt="SMG_MK2">
+            <h2>SMG MK2</h2>
+            <p>$12.000.000</p>
+            <button class="add-to-cart" data-price="12000000.00">Dodaj</button>
+        </div>
         
         <div class="product">
             <img src="ikonki/ak47.png" alt="ak47">
