--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Nasza Rocznica</h1>
-        <div class="counter">
-            <h2>Do Naszej Rocznicy Zostało:</h2>
-            <div id="countdown"></div>
+<div class="container">
+    <h1>Twoja Romantyczna Strona</h1>
+    <div class="heart"></div>
+    <div class="counter">
+        <h2>Do Naszej Rocznicy Zostało:</h2>
+        <div id="countdown"></div>
         </div>
+        
     </div>
+    <!-- Dodajemy animowane serca -->
+    <div class="heart-animation" style="left: 10%; animation-delay: 0s;"></div>
+    <div class="heart-animation" style="left: 20%; animation-delay: 1s;"></div>
+    <div class="heart-animation" style="left: 30%; animation-delay: 2s;"></div>
+    <div class="heart-animation" style="left: 40%; animation-delay: 3s;"></div>
+    <div class="heart-animation" style="left: 50%; animation-delay: 4s;"></div>
+    <div class="heart-animation" style="left: 60%; animation-delay: 5s;"></div>
+    <div class="heart-animation" style="left: 70%; animation-delay: 6s;"></div>
+    <div class="heart-animation" style="left: 80%; animation-delay: 7s;"></div>
+    <div class="heart-animation" style="left: 90%; animation-delay: 8s;"></div>
+</div>
 
     <script>
         // Ustaw datę rocznicy
