--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Twoja Romantyczna Strona</h1>
+    <h1>Nasza Rocznica</h1>
     <div class="heart"></div>
     <div class="counter">
         <h2>Do Naszej Rocznicy Zostało:</h2>
